force-app/main/default/objects/POC_Return__c/POC_Return__c.object-meta.xml
<CustomObject>
    <label>POC Return</label>
    <nameField>
        <label>POC Return Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Returns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>