force-app/main/default/objects/POC_Return__c/fields/Additional_Shipping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Shipping_Notes__c</fullName>
    <label>Additional Pickup/Delivery Notes</label>
    <type>TextArea</type>
</CustomField>