force-app/main/default/objects/POC_Return__c/fields/Available_Pick_Up_Day__c.field-meta.xml
<CustomField>
    <fullName>Available_Pick_Up_Day__c</fullName>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>