force-app/main/default/objects/POC_Return__c/fields/Available_Pick_Up_Times__c.field-meta.xml
<CustomField>
    <fullName>Available_Pick_Up_Times__c</fullName>
    <label>Pickup Timeslot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9:00 am to 12:00 pm</fullName>
            </value>
            <value>
                <fullName>12:00 pm to 3:00 pm</fullName>
            </value>
            <value>
                <fullName>3:00 pm to 6:00 pm</fullName>
            </value>
            <value>
                <fullName>Anytime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>