force-app/main/default/objects/POC_Return__c/fields/Contact_name__c.field-meta.xml
<CustomField>
    <fullName>Contact_name__c</fullName>
    <label>Pickup Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>