force-app/main/default/objects/POC_Return__c/fields/Delivery_Account__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account for delivery</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner/Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POC Returns</relationshipLabel>
    <relationshipName>POC_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>