force-app/main/default/objects/POC_Return__c/fields/Delivery_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Name__c</fullName>
    <label>Delivery Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>