force-app/main/default/objects/POC_Return__c/fields/Delivery_Country__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Country__c</fullName>
    <label>Delivery Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>