force-app/main/default/objects/POC_Return__c/fields/Delivery_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Phone__c</fullName>
    <label>Delivery Phone</label>
    <type>Phone</type>
</CustomField>