force-app/main/default/objects/POC_Return__c/fields/Delivery_User__c.field-meta.xml
<CustomField>
    <fullName>Delivery_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubrik Employee for delivery</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POC_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>