force-app/main/default/objects/POC_Return__c/fields/Delivery_Zip_code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Zip_code__c</fullName>
    <label>Delivery Zip code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>