force-app/main/default/objects/POC_Return__c/fields/EmailLocationName__c.field-meta.xml
<CustomField>
    <fullName>EmailLocationName__c</fullName>
    <formula>IF(TEXT(Location__c) ==&apos;EMEA&apos;, &apos;Amsterdam 2B Refurb Primary&apos;,  IF(TEXT(Location__c) ==&apos;AMERICA&apos;, &apos;Sacramento 2B Refurb Primary&apos;, &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailLocationName</label>
    <type>Text</type>
</CustomField>