force-app/main/default/objects/POC_Return__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>POC_Request__r.Opportunity__r.Owner.FirstName &amp; &apos; &apos; &amp;  POC_Request__r.Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>