force-app/main/default/objects/POC_Return__c/fields/OpportunityOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerEmail__c</fullName>
    <label>Opportunity Owner Email</label>
    <type>Email</type>
</CustomField>