force-app/main/default/objects/POC_Return__c/fields/Original_Packaging_Available__c.field-meta.xml
<CustomField>
    <fullName>Original_Packaging_Available__c</fullName>
    <label>(Deprecated)Original Packaging Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>