force-app/main/default/objects/POC_Return__c/fields/Original_Packaging_NOT_Available_Qty__c.field-meta.xml
<CustomField>
    <fullName>Original_Packaging_NOT_Available_Qty__c</fullName>
    <description>MKT26-833: Created the field to track the count of items with Original Packaging Not Available</description>
    <label>Original Packaging NOT Available Qty</label>
    <summaryFilterItems>
        <field>POC_Return_Item__c.Original_Packaging_Available__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>POC_Return_Item__c.POC_Return__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>