force-app/main/default/objects/POC_Return__c/fields/Pick_up_City__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_City__c</fullName>
    <label>Pickup City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>