force-app/main/default/objects/POC_Return__c/fields/Pick_up_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Contact_Email__c</fullName>
    <label>Pickup Contact Email</label>
    <type>Email</type>
</CustomField>