force-app/main/default/objects/POC_Return__c/fields/Pick_up_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Contact_Phone__c</fullName>
    <label>Pickup Contact Phone</label>
    <type>Phone</type>
</CustomField>