force-app/main/default/objects/POC_Return__c/fields/Pick_up_State__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_State__c</fullName>
    <label>Pickup State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>