force-app/main/default/objects/POC_Return__c/fields/Pick_up_zip_code__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_zip_code__c</fullName>
    <label>Pickup zip code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>