force-app/main/default/objects/POC_Return__c/fields/Pickup_Country__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Country__c</fullName>
    <label>Pickup Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>