force-app/main/default/objects/POC_Return__c/fields/Pickup_Required__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup Required</label>
    <type>Checkbox</type>
</CustomField>