force-app/main/default/objects/POC_Return__c/fields/POC_Request__c.field-meta.xml
<CustomField>
    <fullName>POC_Request__c</fullName>
    <label>POC Request</label>
    <referenceTo>POC__c</referenceTo>
    <relationshipLabel>POC Returns</relationshipLabel>
    <relationshipName>POC_Returns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>