force-app/main/default/objects/POC_Return__c/fields/POC_Request_Link__c.field-meta.xml
<CustomField>
    <fullName>POC_Request_Link__c</fullName>
    <formula>$Label.DomainURL &amp; POC_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Request Link</label>
    <type>Text</type>
</CustomField>