force-app/main/default/objects/POC_Return__c/fields/POC_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>POC_Request_Name__c</fullName>
    <formula>POC_Request__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Request Name</label>
    <type>Text</type>
</CustomField>