force-app/main/default/objects/POC_Return__c/fields/POC_Request_Owner__c.field-meta.xml
<CustomField>
    <fullName>POC_Request_Owner__c</fullName>
    <formula>POC_Request__r.Owner:User.FirstName +&apos; &apos;+POC_Request__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Request Owner</label>
    <type>Text</type>
</CustomField>