force-app/main/default/objects/POC_Return__c/fields/POC_Request_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>POC_Request_Owner_Email__c</fullName>
    <label>POC Request Owner Email</label>
    <type>Email</type>
</CustomField>