force-app/main/default/objects/POC_Return__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <summarizedField>POC_Return_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>POC_Return_Item__c.POC_Return__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>