force-app/main/default/objects/POC_Return__c/fields/Reference_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Serial_Number__c</fullName>
    <formula>POC_Request__r.Serial_Number__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference/Serial Number:</label>
    <type>Text</type>
</CustomField>