force-app/main/default/objects/POC_Return__c/fields/Retrun_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Retrun_Tracking_Number__c</fullName>
    <label>Return Tracking Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>