force-app/main/default/objects/POC_Return__c/fields/Return_to_Rubrik_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Rubrik_warehouse__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Return to Rubrik warehouse</label>
    <type>Checkbox</type>
</CustomField>