force-app/main/default/objects/POC_Return__c/fields/Returned_date__c.field-meta.xml
<CustomField>
    <fullName>Returned_date__c</fullName>
    <label>Returned date</label>
    <type>DateTime</type>
</CustomField>