force-app/main/default/objects/POC_Return__c/fields/Rubrik_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_Sales_Engineer__c</fullName>
    <label>Rubrik Sales Engineer</label>
    <type>Email</type>
</CustomField>