force-app/main/default/objects/POC_Return__c/fields/Secure_Erase_ASN_Location__c.field-meta.xml
<CustomField>
    <fullName>Secure_Erase_ASN_Location__c</fullName>
    <description>MKT26-514: Field to capture Erase ASN Location. This field is used to automate the erase of data upon POC Return</description>
    <label>Secure Erase ASN Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amsterdam FGSC DEF SMF-007</fullName>
            </value>
            <value>
                <fullName>Sacramento FGSC DEF SMF-007</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>