force-app/main/default/objects/POC_Return__c/validationRules/Delivery_Account_OR_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Account_OR_User</fullName>
    <active>true</active>
    <errorConditionFormula>!Return_to_Rubrik_warehouse__c 
&amp;&amp; (
    (
        ISBLANK(   Delivery_Account__c   )
        &amp;&amp; ISBLANK(  Delivery_User__c  )
    )
    ||
    (
        !ISBLANK(   Delivery_Account__c   )
        &amp;&amp; !ISBLANK(  Delivery_User__c  )
    )
)</errorConditionFormula>
    <errorMessage>Please fill either the delivery account or the delivery user</errorMessage>
</ValidationRule>