force-app/main/default/objects/POC_Return__c/validationRules/Delivery_Details_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Details_Required</fullName>
    <active>true</active>
    <errorConditionFormula>!Pickup_Required__c &amp;&amp; !Return_to_Rubrik_warehouse__c 
&amp;&amp; (
    ISBLANK(  Delivery_Contact_Name__c  )
    || ISBLANK( Delivery_Email__c )
    || ISBLANK( Delivery_Phone__c )
    || ISBLANK( TEXT(Delivery_Country__c ))
)</errorConditionFormula>
    <errorMessage>Please fill the delivery address</errorMessage>
</ValidationRule>