force-app/main/default/objects/POC_Return__c/validationRules/Pickup_fields_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Pickup_fields_required</fullName>
    <active>true</active>
    <errorConditionFormula>Pickup_Required__c 
&amp;&amp; (
    ISBLANK(TEXT(Pickup_Country__c))
    || ISBLANK( Available_Pick_Up_Day__c )
    || ISBLANK( TEXT(Available_Pick_Up_Times__c ))
    || ISBLANK( Contact_name__c )
    || ISBLANK( Pick_up_Contact_Phone__c )
    || ISBLANK( Pick_up_Contact_Email__c )
)</errorConditionFormula>
    <errorMessage>Please fill up the pickup details</errorMessage>
</ValidationRule>