force-app/main/default/objects/POC_Return__c/validationRules/PIckup_required_mandatory_to_return.validationRule-meta.xml
<ValidationRule>
    <fullName>PIckup_required_mandatory_to_return</fullName>
    <active>false</active>
    <errorConditionFormula>Return_to_Rubrik_warehouse__c &amp;&amp; !Pickup_Required__c</errorConditionFormula>
    <errorMessage>Pickup is required to return to Rubrik warehouse</errorMessage>
</ValidationRule>