force-app/main/default/objects/POC_Return__c/validationRules/Return_Date_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Date_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Returned&apos;) 
&amp;&amp; (
ISBLANK( Returned_date__c )
||  ISBLANK(Retrun_Tracking_Number__c)
)</errorConditionFormula>
    <errorMessage>Please fill the return date and the return tracking number</errorMessage>
</ValidationRule>